correction overflow-x: hidden -> out !

--- a/style_modified.scss
+++ b/style_modified.scss
@@ -2,10 +2,6 @@
 $bg-primary-color: #f3976c;
 $txt-primary-color: #f3976c;
 
-* {
-    overflow-x: hidden!important;
-}
-
 .navbar-brand {
     border-radius:5px;
 
